--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+body {
+    background-color: rgb(180, 180, 180);
+}
+
 #title, .subtitle, .post_title {
     color: rgb(109, 53, 0);
 }
@@ -5,4 +9,11 @@
 .post_title {
     font-size: 16px;
     font-style: italic;
+}
+
+.post {
+    background-color: white;
+    padding: 10px;
+    border: 3px solid black;
+    margin: 10px;
 }
