--- a/style.css
+++ b/style.css
@@ -1,9 +1,20 @@
 body {
+
     background-color: rgb(233, 233, 233);
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+#conteiner {
+    
 }
 
 #title, .subtitle, .post_title {
-    color: rgb(109, 53, 0);
+    color: rgb(39, 39, 39);
+}
+
+#title {
+    font-size: 40px;
+    text-align: center;
 }
 
 .post_title {
@@ -11,6 +22,7 @@ body {
     font-style: italic;
     margin: 0;
     margin-bottom: 15px;
+    text-align: center;
 }
 
 .post {
@@ -19,17 +31,36 @@ body {
     border: 3px solid black;
     border-radius: 15px;
     margin-bottom: 15px;
+    text-align: center;
+}
+
+.subtitle {
+    font-style: italic;
+    text-align: center;
 }
 
 .post_content {
     margin: 0;
     margin-bottom: 15px;
+    text-align: center;
 }
 
 .post_image {
     margin-bottom: 25px;
+    border-radius: 5px;
 }
 
 .perfil_image {
-    border-radius: 50%;
+    height: 200px;
+    width: 200px;
+    border-radius: 100px;
+    border: 2px solid black;
+}
+a {
+    color: black;
+}
+.lista {
+    list-style-type: none;
+    padding-left: 5px;
+    text-align: center;
 }
